corpus/import.test
==========
Basic import statement
==========
import thing
---
(source_file
  (import
    import: (identifier)))
==========
Import with alias
==========
import thing as other_thing
---
(source_file
  (import
    import: (identifier)
    import_alias: (identifier)))
==========
Import with dotted ident
==========
import package.subpackage
---
(source_file
  (import
    import: (identifier)
    import: (identifier)))
==========
Star import
==========
import all_of_the_things.*
---
(source_file
  (import
    import: (identifier)))
==========
Static import statement
==========
import static thing
---
(source_file
  (import
    (modifier)
    import: (identifier)))
