corpus/label.test
==========
Basic labeled statement
==========
label: def a = 1;
---
(source_file
  (label
    name: (identifier))
  (declaration
    name: (identifier)
    value: (number_literal)))
==========
Spock test
==========
class Test {
    def testAdd() {
        when:
        def a = 10
        def b = 10
        def result = a + b
        then:
        result == 20
     }
}
---
(source_file
  (class_definition
    (identifier)
    (closure
      (function_definition
        (identifier)
  (parameter_list)
  (closure
    (label
      (identifier))
    (declaration
      (identifier)
        (number_literal))
          (declaration
      (identifier)
        (number_literal))
    (declaration
      (identifier)
      (binary_op
        (identifier)
              (identifier)))
    (label
      (identifier))
          (binary_op
      (identifier)
      (number_literal)))))))
