test/corpus/unaryop.test
==========
Unary precedence
==========
x =  5 ** ++y
x = ~5 ** y
---
(source_file
  (assignment
    (identifier)
    (binary_op
      (number_literal)
      (increment_op
        (identifier))))
  (assignment
    (identifier)
    (binary_op
      (unary_op
        (number_literal))
      (identifier))))
